<resources>
    <string name="app_name">Traineeship</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="title_advert">Объявления</string>
    <string name="login">Логин</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="conf_password">Подтвердите Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">
        <u>Забыли пароль?</u>
    </string>
    <string name="authorization">Войти</string>
    <string name="enter_email">Введите почту...</string>
    <string name="enter_password">Введите пароль...</string>
    <string name="help_autorization_text">Введите свою почту и пароль чтобы войти</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Зарегистрируйтесь</string>
    <string name="reg">Регистрация</string>
    <string name="fill_fielsd_for_reg">Заполните все поля, чтобы создать аккаунт</string>
    <string name="full_name">Полное имя</string>
    <string name="create">Создать</string>
    <string name="find_stage">Найти стажировку</string>
    <string name="stages">Стажировки</string>
    <string name="find_message">Найти сообщение</string>
    <string name="error_password">Не верный пароль!</string>
    <string name="_20_12">20:12</string>
    <string name="n_jakkk">Какой-то текст \n jakkk</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="no_correct_email">Не корректный email</string>
    <string name="no_correct_name">Не корректное имя!</string>
    <string name="no_correct_password">Не нажежный пароль!</string>
    <string name="no_equals_password">Пароли не совпадают</string>
    <string name="email_already_exist">Ошибка!\nДанная почта уже используется!</string>
    <string name="send">Откликнуться</string>
    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Васька</item>
        <item>Томасина</item>
        <item>Кристина</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Масяня</item>
        <item>Симба</item>
    </string-array>
</resources>