<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_advert"
        android:icon="@drawable/ic_advert"
        android:title="@string/title_advert" />

</menu>