<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="ru.work.trainsheep.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ru.work.trainsheep.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="ru.work.trainsheep.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.work.trainsheep.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile" />

    <fragment
        android:id="@+id/navigation_advert"
        android:name="ru.work.trainsheep.ui.advert.AdvertFragment"
        android:label="@string/title_advert"
        tools:layout="@layout/fragment_advert" />
</navigation>