<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_login"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="username" tools:ignore="TextContrastCheck"/>

    <EditText
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_login"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="124dp"
            android:hint="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="password" />
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.701"/>
</androidx.constraintlayout.widget.ConstraintLayout>