<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/autorizationButton"
        style="@style/ButtonStyle"
        android:layout_width="201dp"
        android:layout_height="80dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/round_style"
        android:fontFamily="@font/open_sans"
        android:onClick="authorizationUser"
        android:text="@string/authorization"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/textView"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/open_sans"
        android:rotationX="0"
        android:text="Авторизация"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/GrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/help_autorization_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="160pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_style"
        android:padding="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/mail_field"
            style="@style/MyTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5pt"
            android:layout_marginTop="3pt"
            android:layout_marginRight="10pt"
            android:layout_toRightOf="@+id/username_icon"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginLeft="3pt"
            android:layout_marginTop="2pt"
            android:padding="3dp"
            android:src="@drawable/mail_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="160pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20pt"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_style"
        android:padding="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/password_field"
            style="@style/MyTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5pt"
            android:layout_marginTop="3pt"
            android:layout_marginRight="10pt"
            android:layout_toRightOf="@+id/username_icon1"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/username_icon1"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginLeft="3pt"
            android:layout_marginTop="2pt"
            android:padding="3dp"
            android:src="@drawable/password_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30pt"
        android:padding="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autorizationButton"
        tools:ignore="MissingConstraints"
        app:flow_horizontalAlign="center">

        <TextView
            style="@style/GreenText"
            android:layout_width="wrap_content"
            android:layout_height="10pt"
            android:layout_toEndOf="@+id/no_acc_text"
            android:fontFamily="@font/open_sans"
            android:onClick="setRegistrationScreen"
            android:text="@string/registration" />

        <TextView
            android:id="@+id/no_acc_text"
            style="@style/GrayText"
            android:layout_width="wrap_content"
            android:layout_height="10pt"
            android:layout_alignParentStart="true"
            android:text="@string/no_account" />

    </RelativeLayout>

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>