<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView3"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/GrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fill_fielsd_for_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_style_gray"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

        <EditText
                android:id="@+id/reg_name_field"
                style="@style/MyTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0.5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/username_icon"
                android:fontFamily="@font/open_sans"
                android:hint="@string/full_name"
                android:padding="10dp"/>

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="9dp"
            android:padding="3dp"
            android:src="@drawable/people_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_style_gray"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/reg_mail_field"
            style="@style/MyTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/username_icon2"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/username_icon2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:src="@drawable/mail_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_style_gray"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/reg_password_field"
            style="@style/MyTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/username_icon3"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/username_icon3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:src="@drawable/password_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_style_gray"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/reg_conf_password_field"
            style="@style/MyTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/username_icon4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/conf_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/username_icon4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:src="@drawable/password_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/registrationButton"
        style="@style/ButtonStyle"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_style"
        android:fontFamily="@font/open_sans"
        android:text="@string/create"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/error_info"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationButton" android:layout_marginStart="10dp"
            android:textColor="#B31919" android:fontFamily="@font/open_sans" android:textSize="16sp"
            android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>